--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
   "sideEffects": false,
-  "type": "module",
+  "type": "commonjs",
   "bin": "cli.js",
   "main": "index.js",
   "types": "index.d.ts",
